--- a/doks-theme/_sass/components/_example.scss
+++ b/doks-theme/_sass/components/_example.scss
@@ -2,15 +2,11 @@
  * Example (components/_example.scss)
  */
 
-@use "../variables";
-@use "../tools";
-@use "../objects/icons";
-
 /* ----- General ----- */
 .example {
 	overflow: hidden;
-	color: variables.$color-white;
-	background-color: variables.$color-pre-border;
+	color: $color-white;
+	background-color: $color-pre-border;
 	padding: .625rem .625rem .625rem 1.4375rem;
 
 	&::before {
@@ -22,12 +18,12 @@
 	}
 
 	a {
-		@include tools.link-reset;
+		@include link-reset;
 		display: block;
 		float: right;
-		color: variables.$color-dark-blue;
+		color: $color-dark-blue;
 		font-size: .875em;
-		background-color: variables.$color-white;
+		background-color: $color-white;
 		border-radius: 1.25rem;
 		padding: .25rem 1.25rem .3125rem 1.25rem;
 		transition: background-color .2s;
@@ -35,11 +31,11 @@
 		&:hover,
 		&:focus,
 		&:active {
-			background-color: variables.$color-yellow;
+			background-color: $color-yellow;
 		}
 
 		&::after {
-			@include icons.icon;
+			@extend .icon;
 			content: '\e922';
 			display: inline-block;
 			position: relative;
