--- a/doks-theme/_sass/components/_hero-subheader.scss
+++ b/doks-theme/_sass/components/_hero-subheader.scss
@@ -2,16 +2,13 @@
  * Hero subheader (components/_hero-subheader.scss)
  */
 
-@use "../variables";
-@use "../objects/buttons";
-
 /* ----- General ----- */
 .hero-subheader {
-	color: variables.$color-dark-blue;
-	background-color: variables.$color-theme-blue;
+	color: $color-dark-blue;
+	background-color: $color-theme-blue;
 	padding: 3.75rem 0 (4.6875rem - 1.25rem) 0;
 
-	@media (min-width: variables.$screen-sm-min) {
+	@media (min-width: $screen-sm-min) {
 		padding: 9.375rem 0 (10.3125rem - 1.25rem) 0;
 	}
 
@@ -21,20 +18,20 @@
 
 	.btn--github,
 	.btn--w-arrow-down {
-		@include buttons.btn--dark;
+		@extend .btn--dark;
 	}
 
 	.site-header + & {
 		padding: 9.375rem 0 (4.6875rem - 1.25rem) 0;
 
-		@media (min-width: variables.$screen-sm-min) {
+		@media (min-width: $screen-sm-min) {
 			padding: 15rem 0 (10.3125rem - 1.25rem) 0;
 		}
 	}
 }
 
 .hero-subheader--before-out {
-	@media (min-width: variables.$screen-sm-min) {
+	@media (min-width: $screen-sm-min) {
 		padding: 9.375rem 0 (15.3125rem - 1.25rem) 0;
 	}
 }
@@ -60,7 +57,7 @@
 }
 
 .hero-subheader__author-title {
-	font-size: variables.$font-size-h5;
+	font-size: $font-size-h5;
 }
 
 /* ----- More ----- */
