--- a/doks-theme/_sass/components/_title-anchor-link.scss
+++ b/doks-theme/_sass/components/_title-anchor-link.scss
@@ -2,15 +2,13 @@
  * Title anchor link (components/_title-anchor-link.scss)
  */
 
-@use "../tools";
-
 /* ----- General ----- */
 .title-anchor-link {
-	@include tools.link-reset;
+	@include link-reset;
 	display: block;
 	position: absolute;
 	opacity: 0;
-	@include tools.translate3d(-100%, 0, 0);
+	@include translate3d(-100%, 0, 0);
 	transition: opacity .2s;
 	padding-right: .625rem;
 }
