--- a/doks-theme/_sass/objects/_section.scss
+++ b/doks-theme/_sass/objects/_section.scss
@@ -2,23 +2,20 @@
  * Section (objects/_section.scss)
  */
 
-@use "../variables";
-@use "sass:color";
-
 /* ----- General ----- */
 .section {
 	padding: 3.75rem 0 (3.75rem - 1.25rem) 0;
 
-	@media (min-width: variables.$screen-sm-min) {
+	@media (min-width: $screen-sm-min) {
 		padding: 6.25rem 0 (6.25rem - 1.25rem) 0;
 	}
 }
 
 /* ----- Variations ----- */
 .section--darker-theme-color-bg {
-	background-color: color.adjust(variables.$color-theme-blue, $lightness: -3%);
+	background-color: darken($color-theme-blue, 3%);
 }
 
 .section--grey {
-	background-color: variables.$color-section-grey;
+	background-color: $color-section-grey;
 }
