--- a/doks-theme/_sass/tools/_grid-framework.scss
+++ b/doks-theme/_sass/tools/_grid-framework.scss
@@ -2,26 +2,23 @@
  * Grid framework (tools/_grid-framework.scss)
  */
 
-@use "../variables";
-@use "sass:math";
-
 /* ----- Make grid columns ----- */
 @mixin make-grid-columns($i: 1, $list: ".col-xs-#{$i}, .col-sm-#{$i}, .col-md-#{$i}, .col-lg-#{$i}") {
-	@for $i from (1 + 1) through variables.$grid-columns {
+	@for $i from (1 + 1) through $grid-columns {
 		$list: "#{$list}, .col-xs-#{$i}, .col-sm-#{$i}, .col-md-#{$i}, .col-lg-#{$i}";
 	}
 
 	#{$list} {
 		position: relative;
 		min-height: 1px;
-		padding-left: math.ceil(math.div(variables.$grid-gutter-width, 2));
-		padding-right: math.floor(math.div(variables.$grid-gutter-width, 2));
+		padding-left:  ceil(($grid-gutter-width / 2));
+		padding-right: floor(($grid-gutter-width / 2));
 	}
 }
 
 /* ----- Float grid columns ----- */
 @mixin float-grid-columns($class, $i: 1, $list: ".col-#{$class}-#{$i}") {
-	@for $i from (1 + 1) through variables.$grid-columns {
+	@for $i from (1 + 1) through $grid-columns {
 		$list: "#{$list}, .col-#{$class}-#{$i}";
 	}
 
@@ -34,13 +31,13 @@
 @mixin calc-grid-column($index, $class, $type) {
 	@if ($type == width) and ($index > 0) {
 		.col-#{$class}-#{$index} {
-			width: math.percentage(math.div($index, variables.$grid-columns));
+			width: percentage(($index / $grid-columns));
 		}
 	}
 
 	@if ($type == push) and ($index > 0) {
 		.col-#{$class}-push-#{$index} {
-			left: math.percentage(math.div($index, variables.$grid-columns));
+			left: percentage(($index / $grid-columns));
 		}
 	}
 
@@ -52,7 +49,7 @@
 
 	@if ($type == pull) and ($index > 0) {
 		.col-#{$class}-pull-#{$index} {
-			right: math.percentage(math.div($index, variables.$grid-columns));
+			right: percentage(($index / $grid-columns));
 		}
 	}
 
@@ -64,7 +61,7 @@
 
 	@if ($type == offset) {
 		.col-#{$class}-offset-#{$index} {
-			margin-left: math.percentage(math.div($index, variables.$grid-columns));
+			margin-left: percentage(($index / $grid-columns));
 		}
 	}
 }
@@ -79,8 +76,8 @@
 /* ----- Make grid ----- */
 @mixin make-grid($class) {
 	@include float-grid-columns($class);
-	@include loop-grid-columns(variables.$grid-columns, $class, width);
-	@include loop-grid-columns(variables.$grid-columns, $class, pull);
-	@include loop-grid-columns(variables.$grid-columns, $class, push);
-	@include loop-grid-columns(variables.$grid-columns, $class, offset);
+	@include loop-grid-columns($grid-columns, $class, width);
+	@include loop-grid-columns($grid-columns, $class, pull);
+	@include loop-grid-columns($grid-columns, $class, push);
+	@include loop-grid-columns($grid-columns, $class, offset);
 }
