--- a/doks-theme/_sass/utilities/_visibility.scss
+++ b/doks-theme/_sass/utilities/_visibility.scss
@@ -2,9 +2,6 @@
  * Visibility (utilities/_visibility.scss)
  */
 
-@use "../variables";
-@use "../tools";
-
 /* ----- IE Responsive issue fix ----- */
 @at-root {
 	@-ms-viewport {
@@ -13,10 +10,10 @@
 }
 
 /* ----- Visibility ----- */
-@include tools.responsive-invisibility('.visible-xs');
-@include tools.responsive-invisibility('.visible-sm');
-@include tools.responsive-invisibility('.visible-md');
-@include tools.responsive-invisibility('.visible-lg');
+@include responsive-invisibility('.visible-xs');
+@include responsive-invisibility('.visible-sm');
+@include responsive-invisibility('.visible-md');
+@include responsive-invisibility('.visible-lg');
 
 .visible-xs-block,
 .visible-xs-inline,
@@ -33,106 +30,106 @@
 	display: none !important;
 }
 
-@media (max-width: variables.$screen-xs-max) {
-	@include tools.responsive-visibility('.visible-xs');
+@media (max-width: $screen-xs-max) {
+	@include responsive-visibility('.visible-xs');
 }
 
 .visible-xs-block {
-	@media (max-width: variables.$screen-xs-max) {
+	@media (max-width: $screen-xs-max) {
 		display: block !important;
 	}
 }
 
 .visible-xs-inline {
-	@media (max-width: variables.$screen-xs-max) {
+	@media (max-width: $screen-xs-max) {
 		display: inline !important;
 	}
 }
 
 .visible-xs-inline-block {
-	@media (max-width: variables.$screen-xs-max) {
+	@media (max-width: $screen-xs-max) {
 		display: inline-block !important;
 	}
 }
 
-@media (min-width: variables.$screen-sm-min) and (max-width: variables.$screen-sm-max) {
-	@include tools.responsive-visibility('.visible-sm');
+@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+	@include responsive-visibility('.visible-sm');
 }
 
 .visible-sm-block {
-	@media (min-width: variables.$screen-sm-min) and (max-width: variables.$screen-sm-max) {
+	@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
 		display: block !important;
 	}
 }
 
 .visible-sm-inline {
-	@media (min-width: variables.$screen-sm-min) and (max-width: variables.$screen-sm-max) {
+	@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
 		display: inline !important;
 	}
 }
 
 .visible-sm-inline-block {
-	@media (min-width: variables.$screen-sm-min) and (max-width: variables.$screen-sm-max) {
+	@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
 		display: inline-block !important;
 	}
 }
 
-@media (min-width: variables.$screen-md-min) and (max-width: variables.$screen-md-max) {
-	@include tools.responsive-visibility('.visible-md');
+@media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
+	@include responsive-visibility('.visible-md');
 }
 
 .visible-md-block {
-	@media (min-width: variables.$screen-md-min) and (max-width: variables.$screen-md-max) {
+	@media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
 		display: block !important;
 	}
 }
 
 .visible-md-inline {
-	@media (min-width: variables.$screen-md-min) and (max-width: variables.$screen-md-max) {
+	@media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
 		display: inline !important;
 	}
 }
 
 .visible-md-inline-block {
-	@media (min-width: variables.$screen-md-min) and (max-width: variables.$screen-md-max) {
+	@media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
 		display: inline-block !important;
 	}
 }
 
-@media (min-width: variables.$screen-lg-min) {
-	@include tools.responsive-visibility('.visible-lg');
+@media (min-width: $screen-lg-min) {
+	@include responsive-visibility('.visible-lg');
 }
 
 .visible-lg-block {
-	@media (min-width: variables.$screen-lg-min) {
+	@media (min-width: $screen-lg-min) {
 		display: block !important;
 	}
 }
 
 .visible-lg-inline {
-	@media (min-width: variables.$screen-lg-min) {
+	@media (min-width: $screen-lg-min) {
 		display: inline !important;
 	}
 }
 
 .visible-lg-inline-block {
-	@media (min-width: variables.$screen-lg-min) {
+	@media (min-width: $screen-lg-min) {
 		display: inline-block !important;
 	}
 }
 
-@media (max-width: variables.$screen-xs-max) {
-	@include tools.responsive-invisibility('.hidden-xs');
+@media (max-width: $screen-xs-max) {
+	@include responsive-invisibility('.hidden-xs');
 }
 
-@media (min-width: variables.$screen-sm-min) and (max-width: variables.$screen-sm-max) {
-	@include tools.responsive-invisibility('.hidden-sm');
+@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+	@include responsive-invisibility('.hidden-sm');
 }
 
-@media (min-width: variables.$screen-md-min) and (max-width: variables.$screen-md-max) {
-	@include tools.responsive-invisibility('.hidden-md');
+@media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
+	@include responsive-invisibility('.hidden-md');
 }
 
-@media (min-width: variables.$screen-lg-min) {
-	@include tools.responsive-invisibility('.hidden-lg');
+@media (min-width: $screen-lg-min) {
+	@include responsive-invisibility('.hidden-lg');
 }
